--- a/index.html
+++ b/index.html
@@ -1,156 +1,315 @@
 <!doctype html>
-<html>
-<title>Tarud Design - Unique Creative Experience</title>
-<link rel="icon" type="image/png" href="fjtarud.github.io/td_icon.png">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  
-<style>  
-  
-  h1 {
-   font-family: 'Roboto', sans-serif;
-  }
-  
-  body {
-    margin: 0;
-  }
-  
-  header,
-  footer {
-  color: white;
-  background-color: black;
-  }
-  
-  footer {
-    font-size: 10px;
-    text-align: center;
-    margin: 0;
-  }
 
-  
-</style>  
-  
+<html>
+
+<title>Tarud Design - Unique Creative Experience</title>
+
+<link rel="icon" type="image/png" href="fjtarud.github.io/td_icon.png">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="stylesheet" href="/ft.css">
+
+<link rel="stylesheet" href="ft_black.css">
+
+<link rel="stylesheet" href="ft_fonts.css">
+
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+
+
+<style> 
+
+
+
+h1 {
+
+font-family: 'Roboto', sans-serif;
+
+}
+
+
+
+body {
+
+margin: 0;
+
+}
+
+
+
+header,
+
+footer {
+
+color: white;
+
+background-color: black;
+
+}
+
+
+
+footer {
+
+font-size: 10px;
+
+text-align: center;
+
+margin: 0;
+
+}
+
+
+
+
+
+</style> 
+
+
+
 <body>
 
-<!-- Navbar -->
-<div class="w3-top">
- <ul class="w3-navbar w3-theme-d2 w3-left-align">
-  <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
-    <a class="w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-  </li>
-  <li><a href="/index.html" class="w3-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li>
-  <li class="w3-hide-small"><a href="/about.html" class="w3-hover-white">About</a></li>
-   <li class="w3-hide-small"><a href="/work.html" class="w3-hover-white">Work</a></li>
-  <li class="w3-hide-small"><a href="/services.html" class="w3-hover-white">Services</a></li>
-  <li class="w3-hide-small"><a href="/contact.html" class="w3-hover-white">Contact</a></li>
- </ul>
 
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium">
-    <ul class="w3-navbar w3-left-align w3-theme">
-      <li><a href="/about.html">About</a></li>
-      <li><a href="/work.html">Work</a></li>
-      <li><a href="/services.html">Services</a></li>
-      <li><a href="/contact.html">Contact</a></li>
-    </ul>
-  </div>
+
+<!-- Navbar -->
+
+<div class="ft-top">
+
+<ul class="ft-navbar ft-theme-d2 ft-left-align">
+
+<li class="ft-hide-medium ft-hide-large ft-opennav ft-right">
+
+<a class="ft-hover-white ft-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
+
+</li>
+
+<li><a href="/index.html" class="ft-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li>
+
+<li class="ft-hide-small"><a href="/about.html" class="ft-hover-white">About</a></li>
+
+<li class="ft-hide-small"><a href="/work.html" class="ft-hover-white">Work</a></li>
+
+<li class="ft-hide-small"><a href="/services.html" class="ft-hover-white">Services</a></li>
+
+<li class="ft-hide-small"><a href="/contact.html" class="ft-hover-white">Contact</a></li>
+
+</ul>
+
+
+
+<!-- Navbar on small screens -->
+
+<div id="navDemo" class="ft-hide ft-hide-large ft-hide-medium">
+
+<ul class="ft-navbar ft-left-align ft-theme">
+
+<li><a href="/about.html">About</a></li>
+
+<li><a href="/work.html">Work</a></li>
+
+<li><a href="/services.html">Services</a></li>
+
+<li><a href="/contact.html">Contact</a></li>
+
+</ul>
+
 </div>
+
+</div>
+
+
 
 <!-- Image Header -->
-<div class="w3-display-container w3-animate-opacity">
-  <img src="fjtarud.github.io/td_background.jpg" alt="Panoramic" style="width:100%;min-height:250px;max-height:1500px">
-  <div class="w3-container w3-display-bottomleft w3-margin-top"></div>
+
+<div class="ft-display-container ft-animate-opacity">
+
+<img src="fjtarud.github.io/td_background.jpg" alt="Panoramic" style="width:100%;min-height:250px;max-height:1500px">
+
+<div class="ft-container ft-display-bottomleft ft-margin-top"></div>
+
 </div>
-  
+
+
+
 <!-- Small Menu Row -->
-<div class="w3-row-padding w3-center w3-padding-64" id="small menu">
 
-    <div class="w3-third w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-hover-shadow">
-        <div class="w3-container" style="position:relative">
-  <a href="/about.html" onclick="w3_open()" class="w3-btn-floating-large w3-blue" style="position:absolute;top:-28px;right:24px;z-index:0;">
-  <i class="fa fa-plus"></i></a>
-</div>
-        <li class="w3-theme">
-          <h2><a href="/about.html">About</a></h2>
-        </li>
-        <li class="w3-padding-16">A team of design lovers with a special way of doing things.</li>
-        </li>
-      </ul>
-    </div>
-  
-  <div class="w3-third w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-hover-shadow">
-        <div class="w3-container" style="position:relative">
-  <a href="/work.html" onclick="w3_open()" class="w3-btn-floating-large w3-blue" style="position:absolute;top:-28px;right:24px;z-index:0;">
-  <i class="fa fa-plus"></i></a>
-</div>
-        <li class="w3-theme">
-          <h2><a href="/work.html">Work</a></h2>
-        </li>
-        <li class="w3-padding-16">We love what we do and we believe it shines through in the results.</li>
-        </li>
-      </ul>
-    </div>
+<div class="ft-row-padding ft-center ft-padding-64" id="small menu">
 
-<div class="w3-third w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-hover-shadow">
-        <div class="w3-container" style="position:relative">
-  <a href="/contact.html" onclick="w3_open()" class="w3-btn-floating-large w3-blue" style="position:absolute;top:-28px;right:24px;z-index:0;">
-  <i class="fa fa-plus"></i></a>
-</div>
-        <li class="w3-theme">
-          <h2><a href="/contact.html">Contact</a></h2>
-        </li>
-        <li class="w3-padding-16">We cover all of South Florida and the Caribbean.</li>
-        </li>
-      </ul>
-    </div>
 
-<div class="w3-row">
+
+<div class="ft-third ft-margin-bottom">
+
+<ul class="ft-ul ft-border ft-hover-shadow">
+
+<div class="ft-container" style="position:relative">
+
+<a href="/about.html" onclick="ft_open()" class="ft-btn-floating-large ft-blue" style="position:absolute;top:-28px;right:24px;z-index:0;">
+
+<i class="fa fa-plus"></i></a>
+
+</div>
+
+<li class="ft-theme">
+
+<h2><a href="/about.html">About</a></h2>
+
+</li>
+
+<li class="ft-padding-16">A team of design lovers with a special way of doing things.</li>
+
+</li>
+
+</ul>
+
+</div>
+
+
+
+<div class="ft-third ft-margin-bottom">
+
+<ul class="ft-ul ft-border ft-hover-shadow">
+
+<div class="ft-container" style="position:relative">
+
+<a href="/work.html" onclick="ft_open()" class="ft-btn-floating-large ft-blue" style="position:absolute;top:-28px;right:24px;z-index:0;">
+
+<i class="fa fa-plus"></i></a>
+
+</div>
+
+<li class="ft-theme">
+
+<h2><a href="/work.html">Work</a></h2>
+
+</li>
+
+<li class="ft-padding-16">We love what we do and we believe it shines through in the results.</li>
+
+</li>
+
+</ul>
+
+</div>
+
+
+
+<div class="ft-third ft-margin-bottom">
+
+<ul class="ft-ul ft-border ft-hover-shadow">
+
+<div class="ft-container" style="position:relative">
+
+<a href="/contact.html" onclick="ft_open()" class="ft-btn-floating-large ft-blue" style="position:absolute;top:-28px;right:24px;z-index:0;">
+
+<i class="fa fa-plus"></i></a>
+
+</div>
+
+<li class="ft-theme">
+
+<h2><a href="/contact.html">Contact</a></h2>
+
+</li>
+
+<li class="ft-padding-16">We cover all of South Florida and the Caribbean.</li>
+
+</li>
+
+</ul>
+
+</div>
+
+
+
+<div class="ft-row">
+
 <img src="fjtarud.github.io/web_design.jpg" alt="Web Design" style="width:100%;min-height:220px;max-height:620px">
+
 </div>
+
 </div>
+
+
 
 <!-- Footer -->
+
 <footer>
-  <br>
-  <a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" width="175px" alt="Tarud Design Logo"><p>
-  <a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="40px" alt="facebook" target="_blank"></a>
-  <a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="40px" alt="twitter" target="_blank"></a>
-  <a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="40px" alt="google" target="_blank"></a>
-  <a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="40px" alt="linked in" target="_blank"></a>
-  <br>
-  <br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br>
+
+<br>
+
+<a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" width="175px" alt="Tarud Design Logo"><p>
+
+<a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="40px" alt="facebook" target="_blank"></a>
+
+<a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="40px" alt="twitter" target="_blank"></a>
+
+<a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="40px" alt="google" target="_blank"></a>
+
+<a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="40px" alt="linked in" target="_blank"></a>
+
+<br>
+
+<br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br>
+
 </footer>
 
+
+
 <!-- Script For Side Navigation -->
+
 <script>
-function w3_open() {
-    var x = document.getElementById("mySidenav");
-    x.style.width = "300px";
-    x.style.textAlign = "center";
-    x.style.fontSize = "40px";
-    x.style.paddingTop = "10%";
-    x.style.display = "block";
+
+function ft_open() {
+
+var x = document.getElementById("mySidenav");
+
+x.style.width = "300px";
+
+x.style.textAlign = "center";
+
+x.style.fontSize = "40px";
+
+x.style.paddingTop = "10%";
+
+x.style.display = "block";
+
 }
-function w3_close() {
-    document.getElementById("mySidenav").style.display = "none";
+
+function ft_close() {
+
+document.getElementById("mySidenav").style.display = "none";
+
 }
+
+
 
 // Used to toggle the menu on smaller screens when clicking on the menu button
+
 function openNav() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
+
+var x = document.getElementById("navDemo");
+
+if (x.className.indexOf("ft-show") == -1) {
+
+x.className += " ft-show";
+
+} else {
+
+x.className = x.className.replace(" ft-show", "");
+
 }
+
+}
+
 </script>
 
+
+
 </body>
+
 </html>
+
+
+
+
