--- a/work.html
+++ b/work.html
@@ -1,165 +1,11 @@
-<!doctype html>
-<html>
-<title>Tarud Design - Work</title>
-  <link rel="icon" type="image/png" href="fjtarud.github.io/td_icon.png">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  
-<style>  
-  
-  h1 {
-   font-family: 'Roboto', sans-serif;
-  }
-  
-  body {
-    margin: 0;
-  }
-  
-  header,
-  footer {
-  color: white;
-  background-color: black;
-  }
-  
-  footer {
-    font-size: 10px;
-    text-align: center;
-    margin: 0;
-  }
-  
-</style>  
-  
-<body>
+<!doctype html><html><title>Tarud Design - Work</title> <link rel="icon" type="image/png" href="fjtarud.github.io/td_icon.png"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="/ft.css"><link rel="stylesheet" href="/ft_black.css"><link rel="stylesheet" href="ft_fonts.css"><link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> <style> h1 { font-family: 'Roboto', sans-serif; } body { margin: 0; } header, footer { color: white; background-color: black; } footer { font-size: 10px; text-align: center; margin: 0; } </style> <body>
+<!-- Navbar --><div class="ft-top"> <ul class="ft-navbar ft-theme-d2 ft-left-align"> <li class="ft-hide-medium ft-hide-large ft-opennav ft-right"> <a class="ft-hover-white ft-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a> </li> <li><a href="/index.html" class="ft-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li> <li class="ft-hide-small"><a href="/about.html" class="ft-hover-white">About</a></li> <li class="ft-hide-small"><a href="/work.html" class="ft-hover-white">Work</a></li> <li class="ft-hide-small"><a href="/services.html" class="ft-hover-white">Services</a></li> <li class="ft-hide-small"><a href="/contact.html" class="ft-hover-white">Contact</a></li> </ul>
+<!-- Navbar on small screens --> <div id="navDemo" class="ft-hide ft-hide-large ft-hide-medium"> <ul class="ft-navbar ft-left-align ft-theme"> <li><a href="/about.html">About</a></li> <li><a href="/work.html">Work</a></li> <li><a href="/services.html">Services</a></li> <li><a href="/contact.html">Contact</a></li> </ul> </div></div>
+<!-- Work Row --><div class="ft-container ft-padding-64 ft-center" id="work"><h2>Work</h2><p>Since begining studies at the Art Institute at Miami International University of Art and Design, Francisco has evolved as a designer in his many skills and abilities to become a greater creative.<hr><div class="ft-third"><div class="ft-card-2 ft-white"> <img src="/New_Times_Cover.jpg" alt="New Times Magazine Cover" style="width:100%"> <div class="ft-container ft-center"> <h3>New Times Cover</h3> <h4>Digital Illustration</h4> </div> </div></div>
+<div class="ft-third"><div class="ft-card-2 ft-white"> <img src="/Porsche_Magazine_Cover.jpg" alt="Porsche Insider Magazine Cover" style="width:100%"> <div class="ft-container ft-center"> <h3>Porsche Insider Cover</h3> <h4>Introduction to Layout</h4> </div> </div></div>
+<div class="ft-third"><div class="ft-card-2 ft-white"> <img src="/Animal_Planet_Cover.jpg" alt="Thermotar Daikin Colombia" style="width:100%"> <div class="ft-container ft-center"> <h3>Animal Planet Cover</h3> <h4>Image Manipulation</h4> </div> </div></div><div class="ft-container ft-padding-64 ft-center" id="work2"><p><div class="ft-third"><div class="ft-card-2 ft-white"> <img src="/Moto-Cover.jpg" alt="MotoGP Cover" style="width:100%"> <div class="ft-container ft-center"> <h3>MotoGP Magazine Cover</h3> <h4>Application and Industry</h4> </div> </div></div>
+<div class="ft-third"><div class="ft-card-2 ft-white"> <img src="/Trump-Poster.jpg" alt="Trump Poster" style="width:100%"> <div class="ft-container ft-center"> <h3>Music Festival Poster</h3> <h4>Application and Industry</h4> </div> </div></div>
+<div class="ft-third"><div class="ft-card-2 ft-white"> <img src="/Quaker-Ad.jpg" alt="Quaker Ad" style="width:100%"> <div class="ft-container ft-center"> <h3>Quaker Ad</h3> <h4>Application and Industry</h4> </div> </div></div> </div> <!-- Footer --><footer> <br> <a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" width="175px" alt="Tarud Design Logo"><p> <a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="40px" alt="facebook" target="_blank"></a> <a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="40px" alt="twitter" target="_blank"></a> <a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="40px" alt="google" target="_blank"></a> <a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="40px" alt="linked in" target="_blank"></a> <br> <br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br></footer>
+<!-- Script For Side Navigation --><script>function ft_open() { var x = document.getElementById("mySidenav"); x.style.width = "300px"; x.style.textAlign = "center"; x.style.fontSize = "40px"; x.style.paddingTop = "10%"; x.style.display = "block";}function ft_close() { document.getElementById("mySidenav").style.display = "none";}// Used to toggle the menu on smaller screens when clicking on the menu buttonfunction openNav() { var x = document.getElementById("navDemo"); if (x.className.indexOf("ft-show") == -1) { x.className += " ft-show"; } else { x.className = x.className.replace(" ft-show", ""); }}</script>
+</body></html>
 
-<!-- Navbar -->
-<div class="w3-top">
- <ul class="w3-navbar w3-theme-d2 w3-left-align">
-  <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
-    <a class="w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-  </li>
-  <li><a href="/index.html" class="w3-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li>
-  <li class="w3-hide-small"><a href="/about.html" class="w3-hover-white">About</a></li>
-   <li class="w3-hide-small"><a href="/work.html" class="w3-hover-white">Work</a></li>
-  <li class="w3-hide-small"><a href="/services.html" class="w3-hover-white">Services</a></li>
-  <li class="w3-hide-small"><a href="/contact.html" class="w3-hover-white">Contact</a></li>
- </ul>
-
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium">
-    <ul class="w3-navbar w3-left-align w3-theme">
-      <li><a href="/about.html">About</a></li>
-      <li><a href="/work.html">Work</a></li>
-      <li><a href="/services.html">Services</a></li>
-      <li><a href="/contact.html">Contact</a></li>
-    </ul>
-  </div>
-</div>
-
-<!-- Work Row -->
-<div class="w3-container w3-padding-64 w3-center" id="work">
-<h2>Work</h2>
-<p>Since begining studies at the Art Institute at Miami International University of Art and Design, Francisco has evolved as a designer in his many skills and abilities to become a greater creative.
-<hr>
-<div class="w3-third">
-<div class="w3-card-2 w3-white">
-  <img src="/New_Times_Cover.jpg" alt="New Times Magazine Cover" style="width:100%">
-  <div class="w3-container w3-center">
-  <h3>New Times Cover</h3>
-  <h4>Digital Illustration</h4>
-  </div>
-  </div>
-</div>
-
-<div class="w3-third">
-<div class="w3-card-2 w3-white">
-  <img src="/Porsche_Magazine_Cover.jpg" alt="Porsche Insider Magazine Cover" style="width:100%">
-  <div class="w3-container w3-center">
-  <h3>Porsche Insider Cover</h3>
-  <h4>Introduction to Layout</h4>
-  </div>
-  </div>
-</div>
-
-<div class="w3-third">
-<div class="w3-card-2 w3-white">
-  <img src="/Animal_Planet_Cover.jpg" alt="Thermotar Daikin Colombia" style="width:100%">
-  <div class="w3-container w3-center">
-  <h3>Animal Planet Cover</h3>
-  <h4>Image Manipulation</h4>
-  </div>
-  </div>
-</div>
-<div class="w3-container w3-padding-64 w3-center" id="work2">
-<p><div class="w3-third">
-<div class="w3-card-2 w3-white">
-  <img src="/Moto-Cover.jpg" alt="MotoGP Cover" style="width:100%">
-  <div class="w3-container w3-center">
-  <h3>MotoGP Magazine Cover</h3>
-  <h4>Application and Industry</h4>
-  </div>
-  </div>
-</div>
-
-<div class="w3-third">
-<div class="w3-card-2 w3-white">
-  <img src="/Trump-Poster.jpg" alt="Trump Poster" style="width:100%">
-  <div class="w3-container w3-center">
-  <h3>Music Festival Poster</h3>
-  <h4>Application and Industry</h4>
-  </div>
-  </div>
-</div>
-
-<div class="w3-third">
-<div class="w3-card-2 w3-white">
-  <img src="/Quaker-Ad.jpg" alt="Quaker Ad" style="width:100%">
-  <div class="w3-container w3-center">
-  <h3>Quaker Ad</h3>
-  <h4>Application and Industry</h4>
-  </div>
-  </div>
-</div>
-  
-  </div>
-  
-<!-- Footer -->
-<footer>
-  <br>
-  <a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" width="175px" alt="Tarud Design Logo"><p>
-  <a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="40px" alt="facebook" target="_blank"></a>
-  <a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="40px" alt="twitter" target="_blank"></a>
-  <a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="40px" alt="google" target="_blank"></a>
-  <a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="40px" alt="linked in" target="_blank"></a>
-  <br>
-  <br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br>
-</footer>
-
-<!-- Script For Side Navigation -->
-<script>
-function w3_open() {
-    var x = document.getElementById("mySidenav");
-    x.style.width = "300px";
-    x.style.textAlign = "center";
-    x.style.fontSize = "40px";
-    x.style.paddingTop = "10%";
-    x.style.display = "block";
-}
-function w3_close() {
-    document.getElementById("mySidenav").style.display = "none";
-}
-// Used to toggle the menu on smaller screens when clicking on the menu button
-function openNav() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
-</script>
-
-</body>
-</html>
