--- a/services.html
+++ b/services.html
@@ -1,188 +1,376 @@
 <!doctype html>
+
 <html>
+
 <title>Tarud Design - Services</title>
-  <link rel="icon" type="image/png" href="fjtarud.github.io/td_icon.png">
+
+<link rel="icon" type="image/png" href="fjtarud.github.io/td_icon.png">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-black.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
+<link rel="stylesheet" href="/ft.css">
+
+<link rel="stylesheet" href="/ft_black.css">
+
+<link rel="stylesheet" href="/ft_fonts.css">
+
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  
-<style>  
-  
-  h1 {
-   font-family: 'Roboto', sans-serif;
-  }
-  
-  body {
-    margin: 0;
-  }
-  
-  header,
-  footer {
-  color: white;
-  background-color: black;
-  }
-  
-  footer {
-    font-size: 10px;
-    text-align: center;
-    margin: 0;
-  }
-  
-</style>  
-  
+
+
+
+<style> 
+
+
+
+h1 {
+
+font-family: 'Roboto', sans-serif;
+
+}
+
+
+
+body {
+
+margin: 0;
+
+}
+
+
+
+header,
+
+footer {
+
+color: white;
+
+background-color: black;
+
+}
+
+
+
+footer {
+
+font-size: 10px;
+
+text-align: center;
+
+margin: 0;
+
+}
+
+
+
+</style> 
+
+
+
 <body>
 
-<!-- Navbar -->
-<div class="w3-top">
- <ul class="w3-navbar w3-theme-d2 w3-left-align">
-  <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
-    <a class="w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-  </li>
-  <li><a href="/index.html" class="w3-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li>
-  <li class="w3-hide-small"><a href="/about.html" class="w3-hover-white">About</a></li>
-   <li class="w3-hide-small"><a href="/work.html" class="w3-hover-white">Work</a></li>
-  <li class="w3-hide-small"><a href="/services.html" class="w3-hover-white">Services</a></li>
-  <li class="w3-hide-small"><a href="/contact.html" class="w3-hover-white">Contact</a></li>
- </ul>
 
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium">
-    <ul class="w3-navbar w3-left-align w3-theme">
-      <li><a href="/about.html">About</a></li>
-      <li><a href="/work.html">Work</a></li>
-      <li><a href="/services.html">Services</a></li>
-      <li><a href="/contact.html">Contact</a></li>
-    </ul>
-  </div>
+
+<!-- Navbar -->
+
+<div class="ft-top">
+
+<ul class="ft-navbar ft-theme-d2 ft-left-align">
+
+<li class="ft-hide-medium ft-hide-large ft-opennav ft-right">
+
+<a class="ft-hover-white ft-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
+
+</li>
+
+<li><a href="/index.html" class="ft-black"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" height="25px" alt="Tarud Design Logo"></a></li>
+
+<li class="ft-hide-small"><a href="/about.html" class="ft-hover-white">About</a></li>
+
+<li class="ft-hide-small"><a href="/work.html" class="ft-hover-white">Work</a></li>
+
+<li class="ft-hide-small"><a href="/services.html" class="ft-hover-white">Services</a></li>
+
+<li class="ft-hide-small"><a href="/contact.html" class="ft-hover-white">Contact</a></li>
+
+</ul>
+
+
+
+<!-- Navbar on small screens -->
+
+<div id="navDemo" class="ft-hide ft-hide-large ft-hide-medium">
+
+<ul class="ft-navbar ft-left-align ft-theme">
+
+<li><a href="/about.html">About</a></li>
+
+<li><a href="/work.html">Work</a></li>
+
+<li><a href="/services.html">Services</a></li>
+
+<li><a href="/contact.html">Contact</a></li>
+
+</ul>
+
 </div>
 
+</div>
+
+
+
 <!-- Pricing Row -->
-<div class="w3-row-padding w3-center w3-padding-64" id="pricing">
-    <h1>PACKAGES</h1>
-    <p>Choose a package that fits your business needs.</p><br>
-    <div class="w3-quarter w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-hover-shadow">
-        <li class="w3-theme">
-          <p class="w3-xlarge">BASIC</p>
-        </li>
-        <li class="w3-padding-16">Logo Design</li>
-        <li class="w3-padding-16">Business Card Design</li>
-        <li class="w3-padding-16">Envelope Design</li>
-        <li class="w3-padding-16">Letterhead Design</li>
-        <li class="w3-padding-16"><br></li>
-        <li class="w3-padding-16"><br></li>
-        <li class="w3-padding-16"><br><br></li>
-        <li class="w3-padding-16"><br><br></li>
-        <li class="w3-padding-16"><br><br></li>
-        <li class="w3-padding-16"><br></li>
-        <li class="w3-padding-16"><b>1 Revision</b></li>
-        <li class="w3-padding-16">
-          <h1 class="w3-wide"><i class="fa fa-usd"></i> 400</h1>
-      </ul>
-    </div>
 
-    <div class="w3-quarter w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-hover-shadow">
-        <li class="w3-theme">
-          <p class="w3-xlarge">PRO</p>
-        </li>
-        <li class="w3-padding-16">Logo Design</li>
-        <li class="w3-padding-16">Business Card Design</li>
-        <li class="w3-padding-16">Envelope Design</li>
-        <li class="w3-padding-16">Letterhead Design</li>
-        <li class="w3-padding-16">Brochure Design</li>
-        <li class="w3-padding-16">Flyer Design</li>
-        <li class="w3-padding-16">Website Design <br>(3 Pages)</li>
-        <li class="w3-padding-16"><br><br></li>
-        <li class="w3-padding-16"><br><br></li>
-        <li class="w3-padding-16"><br></li>
-        <li class="w3-padding-16"><b>5 Revisions</b></li>
-        <li class="w3-padding-16">
-          <h1 class="w3-wide"><i class="fa fa-usd"></i> 600</h1>
-        </li>
-      </ul>
-    </div>
+<div class="ft-row-padding ft-center ft-padding-64" id="pricing">
 
-    <div class="w3-quarter w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-hover-shadow">
-        <li class="w3-theme">
-          <p class="w3-xlarge">PREMIUM</p>
-        </li>
-        <li class="w3-padding-16">Logo Design</li>
-        <li class="w3-padding-16">Business Card Design</li>
-        <li class="w3-padding-16">Envelope Design</li>
-        <li class="w3-padding-16">Letterhead Design</li>
-        <li class="w3-padding-16">Brochure Design</li>
-        <li class="w3-padding-16">Flyer Design</li>
-        <li class="w3-padding-16">Website Design <br>(10 Pages)</li>
-        <li class="w3-padding-16">Domain & Hosting <br>(1 Year)</li>
-        <li class="w3-padding-16">Email Service <br>(10 Accounts)</li>
-        <li class="w3-padding-16">Email Signature</li>
-        <li class="w3-padding-16"><b>10 Revisions</b></li>
-        <li class="w3-padding-16">
-          <h1 class="w3-wide"><i class="fa fa-usd"></i> 1,000</h1>
-      </ul>
-    </div>
+<h1>PACKAGES</h1>
 
-<div class="w3-quarter w3-margin-bottom">
-      <ul class="w3-ul w3-border w3-hover-shadow">
-        <li class="w3-theme">
-          <p class="w3-xlarge">ULTIMATE</p>
-        </li>
-        <li class="w3-padding-16">Logo Design</li>
-        <li class="w3-padding-16">Business Card Design</li>
-        <li class="w3-padding-16">Envelope Design</li>
-        <li class="w3-padding-16">Letterhead Design</li>
-        <li class="w3-padding-16">Brochure Design</li>
-        <li class="w3-padding-16">Flyer Design</li>
-        <li class="w3-padding-16">Website Design <br>(20 Pages)</li>
-        <li class="w3-padding-16">Domain & Hosting <br>(2 Years)</li>
-        <li class="w3-padding-16">Email Service <br>(20 Accounts)</li>
-        <li class="w3-padding-16">Email Signature</li>
-        <li class="w3-padding-16"><b>Unlimited Revisions</b></li>
-        <li class="w3-padding-16">
-          <h1 class="w3-wide"><i class="fa fa-usd"></i> 2,000</h1>
-      </ul>
-    </div>
-  </div>
-  
+<p>Choose a package that fits your business needs.</p><br>
+
+<div class="ft-quarter ft-margin-bottom">
+
+<ul class="ft-ul ft-border ft-hover-shadow">
+
+<li class="ft-theme">
+
+<p class="ft-xlarge">BASIC</p>
+
+</li>
+
+<li class="ft-padding-16">Logo Design</li>
+
+<li class="ft-padding-16">Business Card Design</li>
+
+<li class="ft-padding-16">Envelope Design</li>
+
+<li class="ft-padding-16">Letterhead Design</li>
+
+<li class="ft-padding-16"><br></li>
+
+<li class="ft-padding-16"><br></li>
+
+<li class="ft-padding-16"><br><br></li>
+
+<li class="ft-padding-16"><br><br></li>
+
+<li class="ft-padding-16"><br><br></li>
+
+<li class="ft-padding-16"><br></li>
+
+<li class="ft-padding-16"><b>1 Revision</b></li>
+
+<li class="ft-padding-16">
+
+<h1 class="ft-wide"><i class="fa fa-usd"></i> 400</h1>
+
+</ul>
+
+</div>
+
+
+
+<div class="ft-quarter ft-margin-bottom">
+
+<ul class="ft-ul ft-border ft-hover-shadow">
+
+<li class="ft-theme">
+
+<p class="ft-xlarge">PRO</p>
+
+</li>
+
+<li class="ft-padding-16">Logo Design</li>
+
+<li class="ft-padding-16">Business Card Design</li>
+
+<li class="ft-padding-16">Envelope Design</li>
+
+<li class="ft-padding-16">Letterhead Design</li>
+
+<li class="ft-padding-16">Brochure Design</li>
+
+<li class="ft-padding-16">Flyer Design</li>
+
+<li class="ft-padding-16">Website Design <br>(3 Pages)</li>
+
+<li class="ft-padding-16"><br><br></li>
+
+<li class="ft-padding-16"><br><br></li>
+
+<li class="ft-padding-16"><br></li>
+
+<li class="ft-padding-16"><b>5 Revisions</b></li>
+
+<li class="ft-padding-16">
+
+<h1 class="ft-wide"><i class="fa fa-usd"></i> 600</h1>
+
+</li>
+
+</ul>
+
+</div>
+
+
+
+<div class="ft-quarter ft-margin-bottom">
+
+<ul class="ft-ul ft-border ft-hover-shadow">
+
+<li class="ft-theme">
+
+<p class="ft-xlarge">PREMIUM</p>
+
+</li>
+
+<li class="ft-padding-16">Logo Design</li>
+
+<li class="ft-padding-16">Business Card Design</li>
+
+<li class="ft-padding-16">Envelope Design</li>
+
+<li class="ft-padding-16">Letterhead Design</li>
+
+<li class="ft-padding-16">Brochure Design</li>
+
+<li class="ft-padding-16">Flyer Design</li>
+
+<li class="ft-padding-16">Website Design <br>(10 Pages)</li>
+
+<li class="ft-padding-16">Domain & Hosting <br>(1 Year)</li>
+
+<li class="ft-padding-16">Email Service <br>(10 Accounts)</li>
+
+<li class="ft-padding-16">Email Signature</li>
+
+<li class="ft-padding-16"><b>10 Revisions</b></li>
+
+<li class="ft-padding-16">
+
+<h1 class="ft-wide"><i class="fa fa-usd"></i> 1,000</h1>
+
+</ul>
+
+</div>
+
+
+
+<div class="ft-quarter ft-margin-bottom">
+
+<ul class="ft-ul ft-border ft-hover-shadow">
+
+<li class="ft-theme">
+
+<p class="ft-xlarge">ULTIMATE</p>
+
+</li>
+
+<li class="ft-padding-16">Logo Design</li>
+
+<li class="ft-padding-16">Business Card Design</li>
+
+<li class="ft-padding-16">Envelope Design</li>
+
+<li class="ft-padding-16">Letterhead Design</li>
+
+<li class="ft-padding-16">Brochure Design</li>
+
+<li class="ft-padding-16">Flyer Design</li>
+
+<li class="ft-padding-16">Website Design <br>(20 Pages)</li>
+
+<li class="ft-padding-16">Domain & Hosting <br>(2 Years)</li>
+
+<li class="ft-padding-16">Email Service <br>(20 Accounts)</li>
+
+<li class="ft-padding-16">Email Signature</li>
+
+<li class="ft-padding-16"><b>Unlimited Revisions</b></li>
+
+<li class="ft-padding-16">
+
+<h1 class="ft-wide"><i class="fa fa-usd"></i> 2,000</h1>
+
+</ul>
+
+</div>
+
+</div>
+
+
+
 <!-- Footer -->
+
 <footer>
-  <br>
-  <a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" width="175px" alt="Tarud Design Logo"><p>
-  <a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="40px" alt="facebook" target="_blank"></a>
-  <a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="40px" alt="twitter" target="_blank"></a>
-  <a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="40px" alt="google" target="_blank"></a>
-  <a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="40px" alt="linked in" target="_blank"></a>
-  <br>
-  <br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br>
+
+<br>
+
+<a href="index.html"><img src="fjtarud.github.io/Tarud_Design_Side_Logo.jpg" width="175px" alt="Tarud Design Logo"><p>
+
+<a href="https://facebook.com/fjtarud"><img src="facebook_icon.png" height="40px" alt="facebook" target="_blank"></a>
+
+<a href="https://twitter.com/fjtarud"><img src="twitter_icon.png" height="40px" alt="twitter" target="_blank"></a>
+
+<a href="https://plus.google.com/fjtarud"><img src="google_icon.png" height="40px" alt="google" target="_blank"></a>
+
+<a href="https://linkedin.com/fjtarud"><img src="linkedin_icon.png" height="40px" alt="linked in" target="_blank"></a>
+
+<br>
+
+<br>© 2016 Francisco Tarud Art. All Rights Reserved. A Division of Tarud-Design LLC.<br>
+
 </footer>
 
+
+
 <!-- Script For Side Navigation -->
+
 <script>
-function w3_open() {
-    var x = document.getElementById("mySidenav");
-    x.style.width = "300px";
-    x.style.textAlign = "center";
-    x.style.fontSize = "40px";
-    x.style.paddingTop = "10%";
-    x.style.display = "block";
+
+function ft_open() {
+
+var x = document.getElementById("mySidenav");
+
+x.style.width = "300px";
+
+x.style.textAlign = "center";
+
+x.style.fontSize = "40px";
+
+x.style.paddingTop = "10%";
+
+x.style.display = "block";
+
 }
-function w3_close() {
-    document.getElementById("mySidenav").style.display = "none";
+
+function ft_close() {
+
+document.getElementById("mySidenav").style.display = "none";
+
 }
+
 // Used to toggle the menu on smaller screens when clicking on the menu button
+
 function openNav() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
+
+var x = document.getElementById("navDemo");
+
+if (x.className.indexOf("ft-show") == -1) {
+
+x.className += " ft-show";
+
+} else {
+
+x.className = x.className.replace(" ft-show", "");
+
 }
+
+}
+
 </script>
 
+
+
 </body>
+
 </html>
+
